<resources>
    <string name="app_name">QR通讯录</string>
    <string name="main_activity_label">通讯录</string>
    <string name="nav_person_detail">查看个人信息</string>
    <string name="nav_data_io">数据导入导出</string>
    <string name="nav_name">暂无姓名</string>
    <string name="nav_phone">暂无联系方式</string>
    <string name="main_search">搜索一下</string>
    <string name="detail_activity_label">详细信息</string>
    <string name="detail_person_info">个人信息</string>
    <string name="detail_name">姓名:</string>
    <string name="detail_phone">电话号码:</string>
    <string name="detail_email">电子邮箱:</string>
    <string name="detail_qq">QQ:</string>
    <string name="detail_wechat">微信:</string>
    <string name="detail_address">地址:</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="cancle">取消</string>
    <string name="scan_hint">扫一扫导入我</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="data_io_title">数据导入导出向导</string>
    <string name="data_output_hint">数据将导出到手机的/data/data/com.example.cyq.qrcodecard/files/data.log文件</string>
    <string name="data_output_button">导出</string>
    <string name="data_input_button">导入</string>
    <string name="data_input_hint">数据将读入到手机的/data/data/com.example.cyq.qrcodecard/files/data.log文件</string>
    <string name="not_support_head">暂不支持导入导出头像，导入前将清空所有数据</string>
</resources>
