<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">



    <android.support.design.widget.AppBarLayout
        android:id="@+id/detail_appBar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/detail_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_header_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

            <ImageView
                android:id="@+id/detail_header_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detail_head_portrait"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/nav_head_portrait"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/detail_name"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/detail_name"
                        android:inputType="text"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/detail_phone"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/detail_phone"
                        android:inputType="phone"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/detail_email"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/detail_emial"
                        android:inputType="textEmailAddress"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/detail_qq"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/detail_qq"
                        android:inputType="number"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/detail_wechat"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/detail_wx"
                        android:inputType="text"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/detail_address"/>

                <EditText
                    android:id="@+id/detail_address"
                    android:inputType="text"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal|bottom"
                    android:layout_width="200dp"
                    android:layout_height="120dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/detail_submit"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/submit"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </FrameLayout>


    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/ll_dial"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end|bottom"
        android:background="#00000000">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/detail_dial"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dial"
            app:backgroundTint="#00e676"
            app:rippleColor="#64dd17"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/detail_share"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            app:backgroundTint="#00e676"
            app:rippleColor="#64dd17"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/detail_input"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/input"
            app:backgroundTint="#81d4fa"
            app:rippleColor="#82b1ff"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/detail_delete"
            android:src="@drawable/delete"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            app:backgroundTint="#f44336"
            app:rippleColor="#d50000"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>